--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "react": "~0.13.3",
     "underscore": "~1.8.3",
-    "backbone": "~1.2.1"
+    "backbone": "~1.2.1",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-jshint": "~1.11.0",
-    "gulp-sass": "~2.0.3"
+    "gulp-sass": "~2.0.3",
+    "jsx": "~0.9.89",
+    "gulp-concat": "~2.6.0"
   }
 }
